--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-redux": "^4.4.5",
     "react-redux-firebase": "^2.2.4",
