--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "2.1.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
-    "redux-firestore": "^0.6.0"
+    "redux-firestore": "^0.6.0",
+    "react-leaflet": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
