--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^4.4.5",
     "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^4.3.1",
